fixed article alignment

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -60,20 +60,20 @@ header h1 {
 aside {
   /* clear float (both) (since we are moving to a new section) background color, float left */
   clear:both;
-  padding:85px 80px 200px 80px; 
+  padding: 60px 70px 180px 70px; 
   float:left;
   background-color:thistle;
   color:white;
 }
 
 aside ul {
-  /* clear both */
   list-style-type:none;
+  padding: 10px;
 }
 
 aside li a {
   display:block;
-  padding-bottom: 21px;
+  padding: 10px;
   text-decoration: none;
   color: white;
 }
@@ -84,26 +84,31 @@ article {
 }
 */
 
-article {
-  float:right;
-  width:65%
-  height:55%
-  background-color:lavendar;
+
+.article-body {
+  float: right;
 }
 
-
 figure {
+  background-color: lightgrey;
+  padding: 70px 30px 0px 30px;
+  text-align: center;
+}
+
+figure img {
 /* figure, we want to center that using margin:auto */  
-  background-color:lightgray;
+  width: 40%;
+  margin: 0px auto; 
 }  
 
 
 figcaption {
-  margin: auto;
-  width: 30%;
-  font-size: 14px;
-  padding-top: 20px;
-  padding-bottom: 56px;
+  margin: 0px auto;
+  width: 40%;
+  text-align: center;
+  font-size: 12px;
+  line-height: 16px;
+  padding: 35px 10px 51px 220px;
 }
 
 
@@ -126,7 +131,7 @@ footer ul li {
 }
 
 footer ul li img {
-  width: 25%;
+  width: 18%;
   margin: 0px auto;
   display: block;
 }
